Cycle through themes in an array.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body class="pxb-blue mat-app-background mat-typography">
+<body class="mat-app-background mat-typography">
     <my-app>loading</my-app>
 </body>
 
